Added Dashbound option

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,6 +35,7 @@
             <br>
             <li class="spawn" data-spawn="altee">Altee St. Train Station</li>
             <li class="spawn" data-spawn="vinewood">Vinewood Blvd. Taxi Stand</li>
+            <li class="spawn" data-spawn="bus">Dashbound Bus Center</li>
             <li class="spawn" data-spawn="hotel">The Richman Hotel</li>
             <li class="spawn" data-spawn="pink">Pink Cage Motel</li>
             <li class="spawn" data-spawn="sandy">Sandy Shores Motel</li>
